Add gitattributes for LF warning

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Authors@R:
 Description: An interface to the Bayesian Weighted Sums model implemented in RStan. 
     It estimates the summed effect of multiple, often moderately to highly correlated, 
     continuous predictors. Its applications can be found in analysis of exposure mixtures. 
-    The model was proposed by Hamra, Maclehose, Croen, Kauffman, and Newschaffer (2021).
+    The model was proposed by Hamra, Maclehose, Croen, Kauffman, and 
+    Newschaffer (2021) <doi:10.3390/ijerph18041373>.
     This implementation include an extension to model binary outcome.
 License: GPL (>= 2)
 Encoding: UTF-8
