--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,32 +1,32 @@
 Package: bws
 Title: Bayesian Weighted Sums
 Version: 0.1.0
-Authors@R: 
+Authors@R:
     person(given = "Phuc H.",
            family = "Nguyen",
            role = c("aut", "cre"),
            email = "phuc.nguyen.rcran@gmail.com",
            comment = c(ORCID = "0000-0002-6206-0194"))
-Description: An interface to the Bayesian Weighted Sums model implemented in RStan. 
-    It estimates the summed effect of multiple, often moderately to highly correlated, 
-    continuous predictors. Its applications can be found in analysis of exposure mixtures. 
-    The model was proposed by Hamra, Maclehose, Croen, Kauffman, and 
+Description: An interface to the Bayesian Weighted Sums model implemented in RStan.
+    It estimates the summed effect of multiple, often moderately to highly correlated,
+    continuous predictors. Its applications can be found in analysis of exposure mixtures.
+    The model was proposed by Hamra, Maclehose, Croen, Kauffman, and
     Newschaffer (2021) <doi:10.3390/ijerph18041373>.
-    This implementation include an extension to model binary outcome.
+    This implementation includes an extension to model binary outcome.
 License: GPL (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Biarch: true
-Depends: 
+Depends:
     R (>= 3.4.0)
-Imports: 
+Imports:
     methods,
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
     rstantools (>= 2.1.1)
-LinkingTo: 
+LinkingTo:
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
     RcppEigen (>= 0.3.3.3.0),
@@ -34,6 +34,6 @@ LinkingTo:
     rstan (>= 2.18.1),
     StanHeaders (>= 2.18.0)
 SystemRequirements: GNU make
-Suggests: 
+Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
